--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,13 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <title>React App</title>
+    <link rel="stylesheet" href="/assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.slim.js"></script>
   </body>
 </html>
